# CSP5

./: LICENSE  README.md  pyproject.toml  requirements.lock.txt  requirements.txt
scripts/: build_zenodo_ensemble_shards.sh  download_zenodo_data.sh
src/cascade_nmr/: torch_training.py
src/cascade_nmr/NMRexp_PaiNN/: build_conformer_ensembles.py  dataset.py  train_assigned.py  train_joint.py
src/cascade_nmr/Predict_SMILES_FF/: torch_model.py
src/cascade_nmr/Predict_SMILES_FF/modules/nfp/: __init__.py
src/cascade_nmr/Predict_SMILES_FF/modules/nfp/preprocessing/: __init__.py  preprocessor.py
src/nmrexp/: __init__.py  matching.py  matching_dp.cpp
