[project]
name = "csp5"
version = "0.1.0"
description = "Reproducibility environment for CSP5 manuscript code."
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=12",
  "scipy>=1.13",
  "scikit-learn>=1.6",
  "tqdm>=4.65",
  "rdkit>=2023.9",
  "torch>=2.2",
]

[tool.uv]
package = false
